--- a/template.yaml
+++ b/template.yaml
@@ -211,6 +211,6 @@ Resources:
 Outputs:
   VpcId:
     Value: !Ref MyVPC
-  WebURL:
+  LoadBalancerDNSName:
     Description: The URL of the website
     Value: !GetAtt ApplicationLoadBalancer.DNSName
